# memory-architecture-cognitive

./: .gitignore  ARCHITECTURE.md  COMPARISON.md  README.md  TECHNICAL_SPEC.md  codebook.py  demo.py  entities.py  expression.py  genome.py  graph.py  memory.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: bench_locomo.py  bench_scaling.py
examples/: demo.py
src/cognitive_memory/: __init__.py  __main__.py  _persistence.py  codebook.py  config.py  entities.py  expression.py  genome.py  graph.py  llm_client.py  memory.py  protocols.py  retrieval.py  testing.py
tests/: test_benchmark.py  test_cli.py  test_codebook.py  test_config.py  test_entities.py  test_expression.py  test_genome.py  test_graph.py  test_integration.py  test_memory.py  test_persistence.py  test_protocols.py
