[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognitive-memory"
version = "0.1.0"
description = "Two-pipeline cognitive memory architecture for AI agents: codebook compression + spreading activation retrieval"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "codebook.py",
    "entities.py",
    "expression.py",
    "genome.py",
    "graph.py",
    "memory.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require ANTHROPIC_API_KEY (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
